--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,9 +1,11 @@
-# RPC node
+# RPC node：
 RPC_url = "http://localhost:8332"
-# RPC userName
+# RPC userName：
 RPC_username = "root"
-# RPC password
+# RPC password：
 RPC_password = "password"
 
-pos_api_port = 5467
-pos_ws_port = 1234
+# POS-API-Service Port：
+POS_API_Port = 2323
+# POS-WS-Service Port：
+POS_WS_Port = 1212
